fix style and layers

--- a/src/components/List/style.scss
+++ b/src/components/List/style.scss
@@ -1,28 +1,53 @@
 .list{
   .item{
     background: #fff;
-    padding: 4px 20px;
+    padding: 12px 20px;
     margin: 15px 0;
     border-radius: 4px;
-    box-shadow: 0px 5px 20px -10px rgba($color: #000000, $alpha: 0.3);
+    box-shadow: 0 8px 14px -7px rgba($color: #000000, $alpha: 0.3);
     display: flex;
     align-content: center;
     align-items: center;
+    justify-content: space-between;
     .item-details{
-      margin-left: 16px;
-      .title{
-        color:red
+      display: flex;
+      align-items: center;
+      .item-info{
+        margin-left: 16px;
+        .title{
+          padding-bottom: 5px;
+          color:#2aa8a7;
+        }
+        .description{
+          padding-bottom: 5px;
+          color:black;
+        }
+        .sub-info{
+          color: #777777;
+          span{
+            font-size: 12px;
+          }
+        }
       }
-      .desciprion:{
-        
+      .icon{
+        width: 60px;
+        height: 60px;
+        object-fit: cover;
+        border-radius: 50%;
+        background: black;
       }
     }
-    .icon{
-      width: 60px;
-      height: 60px;
-      object-fit: cover;
-      border-radius: 50%;
-      background: black;
+
+    .keywords{
+      span{
+        background: #d6fff7;
+        padding: 6px 14px;
+        border-radius: 8px;
+        margin: 0px 0 0px 8px;
+        color: #048084;
+        font-size: 11px;
+      }
     }
+   
   }
 }
